--- a/style.css
+++ b/style.css
@@ -2,27 +2,50 @@ body {
   min-height: 100vh;
   overflow: hidden;
   display: flex;
-  justify-content: center;
-  gap: 100px;
+  flex-direction: column;
+  align-items: center;
+  background: orange;
 }
 
 .title {
-  align-self: center;
+  font-size: 3em;
+  margin: 50px;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  gap: 100px;
+}
+
+button {
+  font-size: 30px;
+  border-radius: 8px;
+  padding: 20px;
+  background-color: orangered;
+  color: white;
+  border: 2px solid white;
 }
 
 .container {
+  border: 1px solid black;
+  width: 672px;
+  height: 672px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  background-color: white;
 }
 
 .rowOfSquares {
   display: flex;
-  justify-content: center;
+  flex: 1;
 }
 
 .square {
-  width: 40px;
-  height: 40px;
-  border: 2px solid black;
+  width: 100%;
+  border: 1px solid black;
+}
+
+.color-trail {
+  background-color: black;
 }
